--- a/QuanLyCuaHang/FormDangKy.resx
+++ b/QuanLyCuaHang/FormDangKy.resx
@@ -524,6 +524,132 @@
         4sCoAQAg4sCoAQAg4sCoAQAg4sCoAQAg0ij1/wG7XUP46YvwdAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAARUAAAEECAYAAAAGZKDcAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vQAADr0BR/uQrQAAHDFJREFUeF7tnfl7FMeZx/cf2seO441jJ7HjOHEOks3hdWKcDV7byWJ7cdbEdgwY
+        A+YwBhsIp23u00gICSEBOhCgEwkhQOi+QBdISEgISYCEhKidd1Lsktm3Z7q6u7prZr6f5/n+kDyuYrqr
+        6qvqOt73nwQAAHgITAUA4CkwFQCAp8BUAACeAlMBAHgKTAUA4CkwFQCAp8BUkpzRsQlxsXNAHDp7SazL
+        qxGLM86K2XtKxGtfnRC/Xn1M/GBZpvjGvFTx7QUHxU9WZImX1ueJmdsKxQf7T4vlh8+Jjfk1Iqe6UzT3
+        DInJe1OyVpDMwFSSiPb+EZERMo9lmVXi9c0nw4bxzx/s91TTVh4Rs3YWi1VHL4gTdd1icHRM/usgWYCp
+        JDDVHdfF7pIm8e7eUvHDT7w3ELt6cW2u+DTrnMg+3y4u9w3LXwcSFZhKgtHcOyQ2hD5JfhX6dOEGuAl6
+        NfRpta+sWfSPYBaTiMBUEoDxiXsi61y7+POuYnYQm6qnFh4UCw9WitLmHvkkIBGAqcQxbdduirW5F8WP
+        P81iB208afr6vPDsZXR8Qj4diFdgKnEI/WWfl1IuHpmTwg7QeBbtMNGO0pXBW/JpQbwBU4kjaOeGdm24
+        wZhooi1s2rJuvHpDPj2IF2AqccDZS33ijW2F7OBLdD0+/0B44fnW+KR8G8B0YCoGMzI2IVYfq2YHW7Lp
+        N2tywovRwHxgKoZy9EJH+EQrN8CSWe/sLhEXOq7LtwRMBKZiGLdD0/wlGWfZAeWXnvgoTTy79JCYtjI7
+        fHDtlS8LxMsb8sNnX2in6XuLM8KfJVxZv7S3tEm+MWAaMBWDoL/Af9h0nB1EXovOiLy5vVAsP1wl9pW1
+        iJKmHtE5MCp/iT3ofAzd+Tle2y22FzaKhQfPhO8MPTLXn12ppZlVuG9kIDAVQ0itaBVPLEhjB48Xem5Z
+        ZvjTYVthg6jpGpD/qh6mpu6Lqsv9YvPJevFWyLieDBkY95u80B+3nAyf1wHmAFMxAF2fO99ZlC7mH6gQ
+        J+uvyH8pGG7cGhfplZfCFw253+lWP1p+ODxbAmYAUwkYuuzHDRQ3emtHkUg70yYGDLwh3NY3HJ7B/G5d
+        Hvvb3WhvabP8V0CQwFQCZPYebw2FZgKFjVdl7eZDxue1uVDIBRAsMJWAmL4+nx0UThRvZhKJ1+by/r4y
+        WTMIAphKAHx/ySF2MKjqhTU54fMsiQItItOuFPesqqITyCAYYCo+8/iH7s93PDo3JXw7mUJBJhq0kzM3
+        pZx9blXRbhfwH5iKj/z8syNs51cRxUyp7kz8E6U5FzvDMzHuHaiIbjwDf4Gp+MSftpxiO72Kkm2A0O7V
+        vFT3s5YDFW2yRuAHMBUfWJB2hu3sdvWzldmioC55z2HsKGpk34uKss5dlrUB3cBUNEOzC66T2xWtC3Qp
+        Hp9PRMqae13H3cUBOX+AqWjkWHUH27ntavUxnLl4mI7rI+GLjdy7siM6eYsj/fqBqWii/sqgeMbF1jEd
+        awc8dN+He2d2RGVxCVEvMBUN3L47KWZ8UcB2ajsqiuODbH6x4KDzdSq63Qz0AVPRAIUA4DqzHeXVdMla
+        QCzW5DiPiod4LPqAqXjM/tMtbCe2o5XZ52UtwC6L0ivZd2lHiCCnB5iKh/QN3xHPLz/MduBYotkNcAYl
+        lOfeaSzhxK0eYCoesiI00+A6byzhApw7yMxf+Juz07cIpu09MBWPoDQaXKeNJTqKbmLck3iDFre59xtL
+        FKUf6T+8BabiEbN2FrGdNpboUBfwBsoPxL3jWKJywDtgKh5AmQO5zhpLdPwceMt/blW/Y0WZAZAJ0Ttg
+        Kh7gJMAQXZQD3lPbPeAo0DalWAXeAFNxCUUt4zppNNFJWzpyDvSwu6SJfe/RRLmbkRTeG2AqLnEyS9lV
+        jINXuqHg39y7j6ZNx2tlaeAGmIoLnMxSXt98QpYGOqnuuC4em5fKtoGVfrIiS4yOJ140Pb+BqbjAySyl
+        tLlHlga6+bKgjm2DaNpXhjQfboGpOCT7fDvbKaPp4/RKWRr4harxT1+fJ0sCp8BUHEKnYLlOGU0UDgH4
+        i5NPVMwm3QFTcUD/8B3xxEdqeY8xSwkO1dnKwoNoKzfAVByQVtHKdsZowiwlOFRnK5R7qH8EVyecAlNx
+        wNu71BKNY5YSPKqzFSzYOgemokjX4Kh4ZA7fEa1U3npNlgZBQUnhubax0qtfYevfKTAVRdIq1KbS9BcS
+        BE9b3zDbPtFEZYA6MBVFVJNb0VkJYAaUyJ5rIysh+LgzYCqKPLtULUJ+Sy9SQpgCmQTXRlai4NpAHZiK
+        AhTTlOt8Vpq57ZQsCUzgxq1xpRvMlLwMqANTUUD12Dc+fcxDNac1nUkCasBUFPj9RrXseJVtfbIkMIW1
+        uRfZtrISUqWqA1OxydjEPbbTWYluyE4gE55xlLX0su1lpVVHkXpWFZiKTehELNfprETpNYF5TN2/Lx6d
+        m8K2GSfaMQJqwFRsonoreSOCKRvLa1+dYNuM07SVR2QpYBeYik1Uv8WPnO+QJYFpqKalRUJ3NWAqNpm9
+        p5TtcFaq6RyQJYFpbC9sZNvMSs09Q7IksANMxSa/XHWU7XBWunn7riwJTIN2dLg2s1JOdacsCewAU7EJ
+        19ms9N1F6bIUMBGaeXDtZiWsj6kBU7HBuOJ28ssb8mVJYCKq7YmcQGrAVGwwdHuc7WxWemNboSwJTIWy
+        EnJtx+mD/adlKWAHmIoNrt28w3Y2K/1lb6ksCUzle4sz2LbjNBN/JJSAqdiAsglync1K8w9UyJLAVH78
+        aRbbdpxeQoR9JWAqNmhSXNhbllklSwJToRvIXNtxoiRjwD4wFRtQtjuus1lpTU61LAlMhRbTubbjRHmW
+        gX1gKjY4197PdjYrrc+7KEsCU3nlywK27Th9Y16qLAXsAFOxQf2VG2xns9KKbGxBms6La3PZtuP0g2WZ
+        shSwA0zFBm3XbrKdzUp0twSYzbSV2Wzbcfo1IsApAVOxwdUbt9jOZqX3vy6TJYGpqMQaplvNwD4wFRsM
+        jo6xnc1Ks3YWyZLAVFTS1s7eUyJLATvAVGxw++4k29mshL9s5sO1m5UWZ5yVpYAdYCo2mLqv1gmfw8Ke
+        0XQOjLLtZqV1ebhQqAJMxSYqJzBJdGkNmElJUw/bZlY6dBZJxVSAqdiEcvhwHc5KCOxjLvvKWtg2s9JF
+        BNxSAqZikxXZ59kOZyWkdjCX5Yer2Daz0ujYhCwJ7ABTsUnaGbXE7BSyEJjJm9sL2TbjhINv6sBUbKJ6
+        VB/bkObylELq09c3I9WKKjAVm6gGanp6cYYsCUyipmuAbS8r4ca5OjAVBaZ9doTteFZquHpDlgSmsK2w
+        gW0rK2Vg50cZmIoCqou1e0ubZUlgCu/sLmHbykrt/SOyJLALTEUB1fMN7+3DHSDToIOJXFtx+uEnWKR1
+        AkxFgVvjE+HYGlwH5ETBffpHxmRpEDQn66+w7WSldxFr2BEwFUXe3lXMdkArpZS3ypIgaCh2MNdGVtpd
+        0iRLAhVgKorsUFzoQyR2MxgYHRPfWZTOtpGVKIwoUAemokht1yDbAaOp8SqO7AeN6uFFCowNnAFTccCM
+        TcfZjmglpM0Mnrd2FLFtY6UNaDPHwFQcsPWU2icQHfXGgm1wFDZeZdslmpp7Mbt0CkzFAS2hDsd1xGjC
+        bCU4Zu1UW1z/865iWRI4AabikD9tOcl2SCththIMTmYpWefaZWngBJiKQ+i0LNchowmzFf9RnaVQMC4E
+        2HIHTMUhfcN3xDNL7Cf5Jn3v4wxxqW9Y1gB0c/RCB9sO0bQ2F4ng3AJTcQF1QK5jRtOHSN7uCxRY6YU1
+        OWwbWOmROSnhHE/AHTAVF3QOjIhvL7Cf6uGB8mu6ZA1AF04Mf15KuSwN3ABTcYnqzWXSS+vzxPgkvtt1
+        Ud15XTw6N4V999FU2twjawBugKm4hLaXnXRgLNrqg7aEuXceTYjw5h0wFQ+gZFNcR42lgjoEx/YaMmvu
+        XccSgjF5B0zFAzqvj4jvL7Gfm/eBfrYyW3QNjMpagFvIpLn3HEtv4NKnp8BUPMLJuRUSRSID7iFzJpPm
+        3nEsnb3UJ2sBXgBT8RDVhGMPhPUV96iGiXyg1ceqZQ3AK2AqHnKmrY/tuHa0owh5gpyy+tgF9p3G0q9X
+        HxMjSBTmOTAVj1l11FkHJ+Xh/Ioy6ZWX2HdpR3TiFngPTMVjxu5Oile/OsF2Yju6dvOOrAnEosjBZcEH
+        +gT5fLQBU9EARXp7dqn6btAD3bx9V9YErKBZHffu7Gjm1lNi6r6sCHgOTEUTOdWdbIe2q5rOAVkTiGSl
+        g1PMD/T88ixc6tQMTEUjXxbUsR3bro6cxzd/JAsPnmHflV1Rmg6gF5iKZubsP812brvCdvPfoWj47+8r
+        Y9+RXW0vbJC1AZ3AVDQzOj4hpq/PYzu5XdEZjGQ+eVvW3KscxiBSnx25IGsDuoGp+EBb6BueshVynd2u
+        6LRoMt4VovM73PtQ0bxUxLDxE5iKT9C1eq7Dq4o+h5IhbELH9ZGQGZSz70BFP12RjZ0en4Gp+Iibg1oP
+        i+KxJHKgp13FTeIZBxc0Od24NS5rBX4BU/EZp1fzOVFoykTaHqXZ3OubnR8cjNRFbMsHAkwlAJxe0edE
+        wbTJqOI5/Uf9lUHxcXol+3xO9MRHaaK9f0TWDvwGphIQbi4fcqK8QvFmLl6bCel36/LEnbuT8l8AQQBT
+        CZCargHHMUCs9MBcTE4KX956zXMzIf3169PyXwBBAlMJmOaeIfEHxYTvdjVzW6FIKW81YvbS0nszfMKY
+        ZhLcb3UrMlJgBjAVA7g9PimWOIxza0d0RuYve0vFjsKGcKR5P5i4NyUqQ594ZCROg1fZEe0SHavGdQaT
+        gKkYRGpFq3jCQR4hVdHi7qydRWJ7YaM4Xtsdni25SfVJt6rpAiTdVaIZwx+3nBSPzUtl/20vNeOLgvC6
+        DDALmIphXOi4ru1zKJaeW5YpXvvqRNhw3v+6LHx5b0X2ObE+76JYk1MtlmVWifkHKsKzHgoW/fKGfPHd
+        RelsXbpFv+02FmSNBKbiADp2rxP6HHITQS6R9fzyw2L/6Rb5poCJwFQUKQh9Lvxq9TH5v/RC28461yPi
+        TZQNkhLjA7OBqSiw5WR9OIk3dfAlh87K/1c/lP7DSV6hRBF9jvmVRmNRemW4nYFzYCo2uHrjFnu5zc/A
+        yZSwjDIhOkmxGq+i7Wc/Mwdmn2//33979p4SLAI7BKYSA7qPEi0eSsOVG/K/9AfK3UyfAd/2YZcoKJGZ
+        pJ1pk0/sDz1Dt8Tj8w/8w++gG84Hff4diQBMJQp7Spr+X0eL1O835ocXVv2mc2BErM29KJ5ZksH+rnhU
+        EGbygP/4soD9TST61O0fwVqOXWAqDIOjY6FPDfvHyGnmEBS0cElrLn/acpL9baaLLv9RmEj69AgKylLI
+        /baHRdvnpxoQ39YOMJUIzrX3hw9VcR0rmlLLW2UNwUGfRltPNYgZAZ1zsatH5uwXb+8qFmkVraI/4N0c
+        ldxBdKAP1wFiA1N5CPp+fsrhYS76TKpovSZrCp7arkGxO/T59u7eUvHDTzLZ3+ynXlybK5ZmVolDZy+J
+        rkEz4u3eGp8IB7zifm80zdpZLBqu+ruWFk/AVELQVXn6hOE6kIpofaV36Las1Sxar90UB0IzA9rFonM2
+        OneR6K4RfS7QOz1R1x34bMQKMjnu99sRnT42YXZqIklvKrRtSHdVuI6jKhpMtFsUL1AcWMqDs/VUfdhs
+        ZnxxXPzi8yPi6cXRF3+/+WFqOMTCb9bkhI/1Lz1UFV7XOd3SK67dNNNUI8msusw+m6oWpJ0Jpw8B/0dS
+        mwotDnp1qIwGV6LFQ6XnoQhq59uvi4aQ+dJ5nUS4b0PXLGi2xrWjE9GnXWHDVVk7SEpTuX//fviCHNdB
+        nOjzI8Ht/gDnUC4grj2damN+raw5uUk6U7ncPyze2l7IdgpVffPDA+GcySB+KQt9sj250F1OpodFt7dN
+        jrrnB0llKnk1XeFbrlxnUBXtGtDReRD/0EL9ey5Tqj4sWpNK5pO4SWMqNDXlOoATLTh4RtYKEgm6Z8S1
+        t1NRzJehJMw7lPCmMnznrpi9p5RtdFXRDeWUcsTySGQoj5KXQbL+7W854RAWyURCm0p7/7B4JcqdDhVR
+        56jtxq3VZOGLAu9mtrQFT6FCk4WENZVzl/s9S505N6VcTN1HQt5kgxZxvVqDI1FozmQgIU3leG0X26hO
+        tL2wQdYKkhEK6k2Bm7i+4URvbi+UNScuCWcqdLKTa0xV/WrVUXG6xZy7PCBYKLk+XYTk+oqqKIFcIp/C
+        TShToc8UrhFVRVfx6S8UAA/T1DMUnmlwfcaJzrQl5h+thDGVfw3NLLiGU9XmE3WyRgB4NuTXsH3HiRIx
+        M0BCmIoXN26nfXZEnKpHEB5gD7rr49X9oW0Jtm4X96YS60atHb2zp0RcMSTGB4gfKKTDh0xAdCcKKoym
+        DuLaVH4eml1wDaSiTcdxCQy4gz5hHv8weixjO6JrJIlA3JoKBQHiGkZFh6suy9oAcAdF/fvF5+7X9RLB
+        WOLSVOgmKNcgdkXBlv1KTgWSh8HRcTFzq/uMkvFuLHFnKn/9+jTbEHb1y1VHw8GGANCFF4fl4tlY4spU
+        lh46yzaAXdFfEQD8gBZeuT6oong1lrgxlXW5F9kXb1d0DR0AP6EZ8ZML3AWAikdjiQtTyTrnLkgxdnhA
+        kFD8Yq5f2hFdim2Ms3QgxpsKvVA3Z1Eo2jkAQePGWF7ffEJMTsXPLXmjTeVe6EW+vtl5+ow3kuBGKIgf
+        3BjL8sPxEzbBaFP5NMt5gq/XQu4OgGm4MZYDFfFx6tZYU8modB4vlHIJA2Aik/emHBvLtz5KE+fb+2VN
+        5mKkqdR0DjhOmzB9fb64OzklawLAPCisxqsOjWX6hjwxMjYhazIT40xlbGJSzPjCWVzZF9bkhFN5AmA6
+        tN3823W5bD+OJdM3H4wzlSUOD7g9u/SQaO5N7iROIL6goE9O4yjvKm6StZiHUabiJrbskfPtshYA4gc3
+        ieIvdFyXtZiFUabiNJ3G33IuyhoAiD9ou5jr17FEcYBMxBhTSS1vZV9cLP3XjiJZAwDxyfjEvfCOJde/
+        Y+nohQ5ZizkYYSqURdBJLArKyUIJ1wGId86HPmUen68e6OnFtblifPKerMUMjDAVupvDvbBYyk+AgDYA
+        PGBfmbP0MptP1ssazCBwU6HUpN9ZlM6+rGiihOsAJBrzD1Sw/T2anlp4MJwD2hQCNxUnW8hv7yqWpQFI
+        LAZHx8J5u7l+H00mhfYI1FQo3zH3gmKpKlQOgETlWHUH2+9jqbjpqqwhWAI1ldl7StmXE02fZiVHkmuQ
+        3Ly3r4zt/9FEN/pNIDBToYz63IuJpueWZYqeoduyBgASl7ruQfHYvFR2HERTugH5gwIzFSd5j3eXmHs0
+        GQCvWZennl6V7s0FTSCmQtHcuBcSTQhnAJKN0bEJR6lVgz5qEYipfHZEPfhSQV23LA1A8kAJ77jxEE2z
+        dgZ7ytx3U6H8s08vVruZOSf0qQRAsvLfu0vYcRFN5a29srT/+G4qlOGeewnRVNs9IEsDkHzQbWRuXEQT
+        rVkGha+mQoGsVb8R3wm5NADJzrxU9Y0N2kEKAl9N5dBZ9e9D3O8BQIgzbdfY8RFNnwQUgd9XU1EN+Es3
+        MAEAf2fWzmJ2nFjpiY/SROeA/+FVfTOV0uYe9sGjaWdRoywNAKAUqNw4iab1eTWytH/4Ziqrj1WzD22l
+        736cIfqG78jSAADi3xWDOf38syOypH/4ZirT1+exD22lZZlVsiQA4AFOIiRWXuqTpf3BF1Np6R1iHzaa
+        KBIWAOAfodCTNPvgxoyV1uX6G8PZF1PZW6oW0eqNbciBDIAVm0/UsePGSi9vyJcl/cEXU3lrRxH7sFba
+        XtggSwIAImnvH2HHTTT5uQuk3VQoxSP3kNEU1KEdAOIF1Syee8uaZUn9aDeV47Xd7ENa6Ref+79aDUC8
+        sTFfLSyCn0sK2k1F9XgxIrsBEBvV+0CPzk0Rk/emZGm9aDeVJxceZB/SSqcarsiSAIBoTFuZzY4hK52s
+        92dsaTUV2h/nHi6abo1PytIAgGh8nF7JjiErLQr9936g1VT2n25hH85Kf9xiRuBeAOKBkia1qy9+rVdq
+        NZUlGWo5fXbgrg8AStClQW4sWYkOz+lGq6m88qXatlf9lRuyJADADu8rpvKgBV7daDUV1XSmU/fvy5IA
+        ADukKN4Fov9eN9pMhWLRcg9lJcROAUAd1c0QP9KjajMV1WRhH6VVyJIAALvcuDXOjicrvbQ+T5bUhzZT
+        2VXcyD6Ulb4ua5ElAQAqPL04gx1TnB6ZmyJL6UObqSxIO8M+lJX8WEACIBFRDdPa3DMkS+pBm6lM36AW
+        lMmPrS4AEpGlh9SObmSda5cl9aDNVL6lsH/+y1VHZSkAgCqqO0ArsvXer9NiKjTr4B7GSh/sPy1LAgBU
+        Ud0Bos8lnWgxFdUV6a9O1MmSAABVTNsB0mIq3YOj7MNYicJNAgCc8y/zD7Bji5Pu5QYtpkKry9zDWCmz
+        6rIsCQBwwvPLD7Nji9OPPjksS+lBi6moBpApqOuWJQEATvjtulx2bHGi6zM60WIqqqdpK1qvyZIAACfM
+        3HqKHVucHpuXKkvpQYupFCjGpa1FoGsAXDEnRS1sq060mMrhqsvsg1iJUg4AAJxDsZ25sWUlnWgxFdWI
+        b/0jyJkMgBvoWAY3tqykEy2msu1UA/sgVrpzF3FpAXBDaoXaqVqdaDGVTcdr2QexEgDAHfk1XezYspJO
+        YCoAJACqR/V1AlMBIAGAqUQIAOAOmEqEAADugKlECADgDphKhAAA7oCpRAgA4A6YSoQAAO6AqUQIAOAO
+        mEqEAADugKlECADgDphKhAAA7oCpRAgA4A6YSoQAAO6AqUQIAOAOmEqEAADugKlECADgDphKhAAA7oCp
+        RAgA4A6YSoQAAO6AqUQIAOCOhDeVLSfr2Qex0uj4hCwJAHDCiTq1rKA60WIqGWcvsQ9ipdLmHlkSAOCE
+        VUcvsGPLSjrRYiolTT3sg1hpY36NLAkAcMLMbfYTtJN0osVUGq/eYB8kmsqae2VpAIAK2efb2TEVTTrR
+        YiqT96bYB4mltr5hWQMAwA40y+fGUjS9vCFfltaDFlMh3t1byj5QLNFLokWnkTt3ZU0AgIehP77plZfE
+        HzYdZ8dQLOlebtBmKqnlagmjIQjyRzWdA3KU6kGbqfSPjIkfLMtkHwqCoGD03r5SOUL1oc1UCCffexAE
+        6dGjc1NEbfegHJ360GoqmK1AkDlac6xajky9aDUVghaUuAeEIMg//deOInFv6r4clXrRbioEPoMgKFgN
+        jo7J0agfX0yFgLFAUDCq82Ed5WF8MxUir6aLfWgIgrzX88uzAjlQ6qupEGQsWLyFIL16Z3eJuHk7mAOk
+        vpsKQbtC9DkEc4EgbzVj03GRU90pR1owBGIqDyBz2VfWIt7cXsi+IAiCYuunK7LF8sPnRO7FYM3kAYGa
+        ysNM3JsSbdduitrugXAUq6LGq+JU/RUIgiJ0uqVXXOi4Lpp6hkTf8B05gszBGFMBACQGMBUAgKfAVAAA
+        ngJTAQB4CkwFAOApMBUAgKfAVAAAngJTAQB4iBD/A7n9ONBU4d2tAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAARUAAAEECAYAAAAGZKDcAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
